--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "antd": "^5.14.1",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "rc-banner-anim": "^2.4.5",
     "rc-queue-anim": "^2.0.0",
     "react": "^18",
@@ -21,6 +21,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8.57.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
