--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^5.14.1",
+    "js-cookie": "^3.0.5",
     "next": "^14.2.3",
     "rc-banner-anim": "^2.4.5",
     "rc-queue-anim": "^2.0.0",
@@ -17,6 +18,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
