--- a/.github/workflows/create_branch.yml
+++ b/.github/workflows/create_branch.yml
@@ -21,7 +21,7 @@ jobs:
           # Sanitize the issue title to create a valid branch name
           ISSUE_NUMBER="${{ github.event.issue.number }}"
           RANDOM_NUMBER=$((RANDOM % 1000))
-          BRANCH_NUMBER="BCB-$ISSUE_NUMBER-$RANDOM_NUMBER"
+          BRANCH_NUMBER="DR-$ISSUE_NUMBER-$RANDOM_NUMBER"
           BRANCH_NAME=$(echo "$BRANCH_NUMBER-${{ github.event.issue.title }}" | sed -e 's/[^a-zA-Z0-9._-]/-/g' | tr '[:upper:]' '[:lower:]')
           echo "BRANCH_NAME=$BRANCH_NAME" >> "$GITHUB_OUTPUT"
       - name: Create and push the new branch
