--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.3",
     "@tailwindcss/postcss": "^4.1.13",
     "framer-motion": "^12.23.12",
