--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.3",
     "@tailwindcss/postcss": "^4.1.13",
+    "@testing-library/user-event": "^14.6.1",
     "framer-motion": "^12.23.12",
     "next": "^15.5.2",
     "next-international": "^1.3.1",
